@@ -11,15 +11,19 @@ import com.oracle.truffle.api.interop.UnsupportedMessageException;
 import com.oracle.truffle.api.interop.UnsupportedTypeException;
 import com.oracle.truffle.api.library.ExportLibrary;
 import com.oracle.truffle.api.library.ExportMessage;
+import com.oracle.truffle.api.nodes.Node;
 import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
-import java.util.ArrayList;
+import java.util.Set;
+import java.util.function.BiConsumer;
+import java.util.function.Function;
 import org.enso.jvm.channel.Channel;
 import org.enso.jvm.channel.JVM;
 import org.enso.jvm.interop.impl.OtherJvmMessage;
 import org.enso.jvm.interop.impl.OtherJvmPool;
 import org.enso.jvm.interop.impl.OtherJvmResult;
+import org.enso.jvm.interop.impl.OtherJvmUtils;
 import org.graalvm.polyglot.Context;
 import org.graalvm.polyglot.HostAccess;
 import org.graalvm.polyglot.Value;
@@ -46,7 +50,7 @@ public final class OtherJvmClassLoader implements TruffleObject, AutoCloseable {
    * @return new instance of the class loader from the provided JVM
    */
   public static OtherJvmClassLoader create(JVM jvm) {
-    return createImpl(jvm, null, null);
+    return createImpl(jvm, null, null, null);
   }
 
   /**
@@ -54,9 +58,11 @@ public final class OtherJvmClassLoader implements TruffleObject, AutoCloseable {
    *
    * @param mainModule name of the main module to initialize
    * @param language the language to associate objects loaded by this loader with
+   * @param polyglotBindings function to find polyglot context of a language
    * @param otherJvm normally we run in AOT mode but for debugging purposes we can also emulate the
    *     connection in a single JVM - pass in value of TruffleOptions.AOT or equivalent
    * @param ctx own context to execute code in
+   * @param onlyWithModules only enable given module names (can be {@code null})
    * @return new instance of the class loader
    * @throws IOException
    * @throws URISyntaxException
@@ -64,11 +70,13 @@ public final class OtherJvmClassLoader implements TruffleObject, AutoCloseable {
   public static OtherJvmClassLoader create(
       String mainModule,
       Class<? extends TruffleLanguage> language,
+      Function<String, Object> polyglotBindings,
       boolean otherJvm,
-      TruffleContext ctx)
+      TruffleContext ctx,
+      Set<String> onlyWithModules)
       throws IOException, URISyntaxException {
-    var jvm = otherJvm ? initializeJvm(mainModule) : null;
-    return createImpl(jvm, ctx, language);
+    var jvm = otherJvm ? initializeJvm(mainModule, onlyWithModules) : null;
+    return createImpl(jvm, polyglotBindings, ctx, language);
   }
 
   /**
@@ -90,7 +98,11 @@ public final class OtherJvmClassLoader implements TruffleObject, AutoCloseable {
     try {
       var rawClass = loadRawClass(fqn);
       if (ctx == null) {
-        ctx = Context.newBuilder("hosted").allowHostAccess(HostAccess.ALL).build();
+        ctx =
+            Context.newBuilder("hosted")
+                .allowHostAccess(HostAccess.ALL)
+                .allowExperimentalOptions(true)
+                .build();
       }
       return ctx.asValue(rawClass);
     } catch (ClassNotFoundException ex) {
@@ -103,7 +115,7 @@ public final class OtherJvmClassLoader implements TruffleObject, AutoCloseable {
   public final void close() {
     try {
       try {
-        channel.close();
+        channel.getConfig().close(channel);
       } finally {
         if (ctx != null) {
           ctx.close();
@@ -117,12 +129,15 @@ public final class OtherJvmClassLoader implements TruffleObject, AutoCloseable {
   }
 
   private static OtherJvmClassLoader createImpl(
-      JVM jvm, TruffleContext ctx, Class<? extends TruffleLanguage> language) {
+      JVM jvm,
+      Function<String, Object> polyglotBindings,
+      TruffleContext ctx,
+      Class<? extends TruffleLanguage> language) {
     var ch = Channel.create(jvm, OtherJvmPool.class);
     var pool = ch.getConfig();
-    if (ctx != null) {
-      pool.onEnterLeave(language, ctx::enter, ctx::leave);
-    }
+    Function<Node, Object> enter = ctx != null ? ctx::enter : null;
+    BiConsumer<Node, Object> leave = ctx != null ? ctx::leave : null;
+    pool.onEnterLeave(language, polyglotBindings, enter, leave);
     return new OtherJvmClassLoader(ch);
   }
 
@@ -189,37 +204,36 @@ public final class OtherJvmClassLoader implements TruffleObject, AutoCloseable {
     return result.value(null);
   }
 
-  private static JVM initializeJvm(String mainModule) throws IOException, URISyntaxException {
+  private static JVM initializeJvm(String mainModule, Set<String> moduleNamesOrNull)
+      throws IOException, URISyntaxException {
+    var libFile = findDynamicLibrary(mainModule);
+    if (libFile.exists()) {
+      return JVM.create(libFile);
+    } else {
+      return initializeHotSpotJVM(mainModule, moduleNamesOrNull);
+    }
+  }
+
+  private static JVM initializeHotSpotJVM(String mainModule, Set<String> moduleNamesOrNull)
+      throws IOException, URISyntaxException {
     var home = System.getProperty("java.home");
     if (home == null) {
       throw new IOException("No java.home specified");
     }
     var javaHome = new File(home);
-    if (!javaHome.exists()) {
-      throw new IOException("JVM doesn't exists: " + javaHome);
-    }
-    var loc = OtherJvmClassLoader.class.getProtectionDomain().getCodeSource().getLocation();
-    var component = new File(loc.toURI().resolve("..")).getAbsoluteFile();
-    if (!component.getName().equals("component")) {
-      component = new File(component, "component");
-    }
-    var commandAndArgs = new ArrayList<String>();
-    var assertsOn = false;
-    assert assertsOn = true;
-    if (assertsOn) {
-      commandAndArgs.add("-ea");
-    }
-    commandAndArgs.add("--sun-misc-unsafe-memory-access=allow");
-    commandAndArgs.add("-Dpolyglot.engine.WarnInterpreterOnly=false");
-    commandAndArgs.add("-Dtruffle.UseFallbackRuntime=true");
-    commandAndArgs.add("--enable-native-access=org.graalvm.truffle");
-    commandAndArgs.add("--enable-native-access=org.enso.jvm.channel");
-    commandAndArgs.add("--add-opens=java.base/java.nio=ALL-UNNAMED");
-    if (!component.isDirectory()) {
-      throw new IOException("Cannot find " + component + " directory");
-    }
-    commandAndArgs.add("--module-path=" + component.getPath());
-    commandAndArgs.add("-Djdk.module.main=" + mainModule);
-    return JVM.create(javaHome, commandAndArgs.toArray(new String[0]));
+    var args = OtherJvmUtils.findJvmArgs(javaHome, mainModule, moduleNamesOrNull);
+    return JVM.create(javaHome, args);
+  }
+
+  private static File findDynamicLibrary(String name) {
+    var dir = OtherJvmUtils.findModules();
+    var ext =
+        switch (org.enso.common.Platform.getOperatingSystem()) {
+          case LINUX -> ".so";
+          case MACOS -> ".dylib";
+          case WINDOWS -> ".dll";
+        };
+    var file = new File(dir, name + ext);
+    return file;
   }
 }
